# dot

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json
include/: defines.h
lib/: CMakeLists.txt
src/: logger.ixx  main.cpp
